fix missing border

--- a/src/templates/sass/general.sass
+++ b/src/templates/sass/general.sass
@@ -216,6 +216,7 @@ footer
     bottom: 0.2em
     -webkit-transition: 0.4s
     transition: 0.4s
+    border: 0.01rem solid v.$fg
 
 .dark-mode
   .slider
